--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,5 +40,6 @@ dependencies {
 
     // Displaying images
     compile 'com.github.bumptech.glide:glide:3.6.1'
-    apply plugin: 'com.google.gms.google-services'
+    compile 'com.google.firebase:firebase-database:10.0.1'
 }
+apply plugin: 'com.google.gms.google-services'
